--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 :root {
-  --color2: 0, 0, 0;
-  --accent2: 57, 57, 57;
-  --color1: 223, 223, 223;
-  --accent1: 255, 255, 255;
-  --fontcolor1: 0, 0, 0;
-  --fontcolor2: 255, 255, 255;
-  --overlaycolor2: 138, 138, 138;
-  --overlaycolor1: 224, 224, 224;
+  --color1: 57, 57, 57;
+  --color2: 223, 223, 223;
+  --accent1: 0, 0, 0;
+  --accent2: 255, 255, 255;
+  --fontcolor2: 0, 0, 0;
+  --fontcolor1: 255, 255, 255;
+  --overlaycolor1: 138, 138, 138;
+  --overlaycolor2: 224, 224, 224;
   scroll-behavior: smooth;
 }
 * {
@@ -372,6 +372,26 @@ body {
   }
 }
 
+.hero img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease-in-out;
+  /* z-index: -1; */
+  object-fit: cover;
+}
+
+.hero svg {
+  fill: rgba(var(--fontcolor1));
+}
+.hero .lower {
+  width: 100%;
+  height: 20%;
+  background-color: rgb(var(--accent1));
+  border-radius: 0px 0px 5px 5px;
+}
 .featured {
   margin: 20px 0px;
   display: grid;
@@ -643,8 +663,8 @@ body {
   top: 50%;
   transform: translate(-50%, -50%);
   background-color: rgb(0, 0, 0);
-  color: rgb(0, 255, 0);
-  font-weight: 600;
+  color: rgb(85, 255, 85);
+  font-weight: 500;
   padding: 10px 30px;
   border-radius: 20px;
   box-shadow: 0 0 30px rgb(88, 88, 88);
@@ -652,7 +672,7 @@ body {
   z-index: 1000;
 }
 .order_successful p {
-  filter: drop-shadow(0px 0px 1px rgb(0, 255, 0));
+  filter: drop-shadow(0px 0px 3px rgb(0, 255, 0));
 }
 
 @media (max-width: 1000px) {
