--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ body {
 .menu ul li:hover {
   transform: scale(1.1);
 }
+
+.menu ul li:active {
+  transform: scale(0.9);
+}
 .menu ul svg {
   width: 1.2em;
   height: 1.2em;
@@ -209,6 +213,82 @@ body {
   font-size: 1.5em;
   font-weight: 600;
   color: rgba(var(--fontcolor1), 0.3);
+}
+
+.login {
+  background-color: rgba(var(--overlaycolor1));
+  color: rgba(var(--fontcolor1));
+  width: 400px;
+  border-radius: 20px;
+  height: 500px;
+  position: fixed;
+  top: 53%;
+  left: 50%;
+  z-index: 10;
+  transform: translate(-50%, -50%) scale(0);
+  box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.772);
+  /* display: flex; */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  display: none;
+  transition: all 0.3s ease-in-out;
+}
+.login .container {
+  height: 70%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.login h1 {
+  font-size: 2em;
+  font-weight: 800;
+}
+.login .input_container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.login input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(var(--fontcolor1));
+  width: 90%;
+  color: rgba(var(--fontcolor1));
+  text-align: center;
+}
+.login input:focus {
+  outline: none;
+}
+
+.login input::placeholder {
+  color: rgba(var(--fontcolor1), 0.3);
+}
+
+.login .login_submit {
+  background-color: rgba(var(--accent2));
+  color: rgba(var(--fontcolor2));
+  font-weight: 700;
+  font-size: 20px;
+  padding: 6px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.login .login_submit:hover {
+  background-color: rgba(var(--accent1));
+  color: rgba(var(--fontcolor1));
+}
+
+.login .login_submit:active {
+  background-color: rgba(var(--fontcolor1));
+  color: rgba(var(--fontcolor2));
 }
 
 .cart .cart_footer {
