--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-  --color1: 57, 57, 57;
+  --color1: 0, 0, 0;
   --color2: 223, 223, 223;
-  --accent1: 0, 0, 0;
+  --accent1: 57, 57, 57;
   --accent2: 255, 255, 255;
   --fontcolor2: 0, 0, 0;
   --fontcolor1: 255, 255, 255;
@@ -87,6 +87,105 @@ body {
   opacity: 0;
   display: none;
   transition: all 0.3s ease-in-out;
+}
+
+.product_overlay {
+  justify-content: center;
+  /* display: flex;
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1); */
+}
+
+.product_overlay > div:nth-of-type(1) {
+  width: 90%;
+  height: 70%;
+  display: flex;
+  gap: 1em;
+  margin: 1em 0em;
+}
+
+/* .product_overlay .product_img {
+  width: 1000px;
+  aspect-ratio: 5/6;
+  position: relative;
+}
+.product_overlay .product_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  left: 0;
+  top: 0;
+  position: relative;
+  border-radius: 10px;
+} */
+
+.product_overlay .prod_display {
+  width: 140%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+.prod_display .main_image {
+  width: 100%;
+  height: 70%;
+  position: relative;
+}
+
+.prod_display .main_image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+}
+
+.prod_display .thumbnails {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  gap: 0.2em;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  padding: 0px 1em;
+}
+.prod_display .thumbnails img {
+  width: 25%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  opacity: 0.8;
+}
+.prod_display .thumbnails .active {
+  opacity: 1;
+}
+.product_overlay .product_details {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  gap: 1em;
+  margin: 1em 0em;
+}
+.product_details p:nth-of-type(1) {
+  font-size: 2em;
+  font-weight: 600;
+}
+
+.product_ovelay .overlay .header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: max-content;
+  margin: 20px 0px;
+  /* position: absolute; */
+  top: 0;
 }
 
 .overlay .header {
@@ -195,12 +294,12 @@ body {
   text-align: center;
   transition: all 0.3s ease-in-out;
 }
-.overlay .items_container .item .details .buttons > div:hover {
+.overlay .buttons > div:hover {
   background-color: rgba(var(--fontcolor1));
   color: rgba(var(--fontcolor2));
   cursor: pointer;
 }
-.overlay .items_container .item .details .buttons > div:active {
+.overlay .buttons > div:active {
   background-color: rgba(var(--fontcolor2));
   color: rgba(var(--fontcolor1));
 }
@@ -274,8 +373,8 @@ body {
   background-color: rgba(var(--accent2));
   color: rgba(var(--fontcolor2));
   font-weight: 700;
-  font-size: 1.5em;
-  padding: 6px 20px;
+  font-size: 1em;
+  padding: 6px 30px;
   border-radius: 20px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
