--- a/style.css
+++ b/style.css
@@ -162,15 +162,9 @@ body {
   font-weight: 600;
 }
 
-.product_ovelay .overlay .header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-  height: max-content;
-  margin: 20px 0px;
-  /* position: absolute; */
-  top: 0;
+.product_overlay .star {
+  width: 1em;
+  fill: rgba(var(--fontcolor1));
 }
 
 .product_overlay .buttons {
@@ -181,6 +175,11 @@ body {
 .product_overlay .buttons > div {
   justify-content: center;
   display: flex;
+}
+
+.product_overlay .product_overlay .star {
+  width: 1em;
+  fill: rgba(var(--fontcolor1));
 }
 
 .overlay .header {
@@ -202,7 +201,7 @@ body {
   font-size: 1.56em;
   font-weight: 600;
 }
-.overlay svg {
+.overlay .close_button {
   fill: rgba(var(--fontcolor1));
   width: 1.5em;
   height: 1.5em;
