--- a/style.css
+++ b/style.css
@@ -89,13 +89,6 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
-.product_overlay {
-  justify-content: center;
-  /* display: flex;
-  opacity: 1;
-  transform: translate(-50%, -50%) scale(1); */
-}
-
 .product_overlay > div:nth-of-type(2) {
   width: 90%;
   height: 70%;
@@ -144,10 +137,11 @@ body {
   border-radius: 2px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 .prod_display .thumbnails .active {
   opacity: 1;
+  transform: scale(1.01);
 }
 .product_overlay .product_details {
   width: 100%;
@@ -356,12 +350,17 @@ body {
 
 .login svg {
   position: absolute;
-  right: -10px;
-  width: 1.5em;
-  height: 1.5em;
+  right: 10px;
+  bottom: 3px;
+  width: 1.2em;
+  height: 1.2em;
   cursor: pointer;
-  opacity: 0.8;
+  opacity: 0.5;
   transition: all 0.3s ease-in-out;
+}
+
+.login svg:hover {
+  opacity: 1;
 }
 .login input {
   background-color: transparent;
@@ -455,6 +454,28 @@ body {
   /* width: max-content; */
   text-align: center;
   transition: all 0.3s ease-in-out;
+}
+
+.menu_dropdown > p {
+  display: inline;
+}
+.menu_dropdown div {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.menu_dropdown svg {
+  width: 2em;
+  animation: arrow_scale 2s infinite ease-in-out;
+}
+
+@keyframes arrow_scale {
+  50% {
+    transform: scale(0.7);
+  }
 }
 
 .nav .logo_nav:hover {
