--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   font-family: poppins;
   padding: 0;
   margin: 0;
+  z-index: 2;
 }
 
 *::-webkit-scrollbar {
@@ -24,9 +25,18 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgb(var(--color1));
   color: rgb(var(--fontcolor1));
   transition: all 0.3s ease-in-out;
+}
+
+#particles-js {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgb(var(--color1));
 }
 
 .menu {
