--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
+.preloader {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgb(67, 67, 67);
+  z-index: 1000;
+}
+
 #particles-js {
   position: fixed;
   top: 0;
