--- a/style.css
+++ b/style.css
@@ -634,7 +634,8 @@ body {
   color: white;
 }
 .intro .intro_text h1 {
-  color: rgb(236, 24, 236);
+  /* color: rgb(236, 24, 236); */
+  color: red;
   font-weight: 900;
   letter-spacing: -2px;
 }
