--- a/style.css
+++ b/style.css
@@ -39,6 +39,19 @@ body {
   background-color: rgb(var(--color1));
 }
 
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(var(--color1), 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
 .menu {
   font-size: 16px;
   width: max-content;
