--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
   align-items: center;
   flex-direction: column;
   z-index: 1000;
+  transition: all 0.3s ease-in-out;
 }
 
 .preloader h1 {
